Fixed encoding on meta.json (removed BOM) Added word wrap to notice messages is CSS Added thumbnail for Roundcube settings and preview image for readme Added gitignore for PhpStrorm files Updated README with a preview

--- a/owncloud-login-styles.css
+++ b/owncloud-login-styles.css
@@ -154,6 +154,8 @@
 #login-form #message>div {
 	font-size: 16px;
 	background-position: 0 -83px;
+	max-width: 300px;
+	white-space: normal;
 }
 
 #login-form #message .loading {
